--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -7,6 +7,8 @@ node_modules
 .env.local
 .env.*.local
 
+# Allow the production environment file
+!/.env.production
 # Log files
 npm-debug.log*
 yarn-debug.log*
