--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -3,7 +3,13 @@ node_modules
 /dist
 
 
+# local env files
+.env.local
+.env.*.local
 
+
+!/.env.production
+!/frontend/.env.production
 # Log files
 npm-debug.log*
 yarn-debug.log*
