--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -8,7 +8,7 @@ node_modules
 .env.*.local
 
 
-!/.env.production
+# Allow the production environment file in the frontend folder
 !/frontend/.env.production
 # Log files
 npm-debug.log*
